Simplified the masking layer significantly.

--- a/zimtohrli.ipynb
+++ b/zimtohrli.ipynb
@@ -73,8 +73,7 @@
     "import audio_signal\n",
     "import loudness\n",
     "import cam\n",
-    "import masking\n",
-    "import zimtohrli\n"
+    "import masking\n"
    ]
   },
   {
